# open-iot-sdk

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  towncrier.toml
components/: CMakeLists.txt  DeclareSdkComponents.cmake
components/arm-2d/: CMakeLists.txt
components/aws-iot-device-sdk-embedded-c/: CMakeLists.txt
components/aws-iot-device-sdk-embedded-c/aws_network_manager/: CMakeLists.txt  aws_network_manager.c
components/azure-iot-sdk-c/: CMakeLists.txt
components/azure-iot-sdk-c/c-utility/: CMakeLists.txt
components/azure-iot-sdk-c/iothub-client/: CMakeLists.txt
components/azure-iot-sdk-c/iothub-provisioning-client/: CMakeLists.txt
components/azure-iot-sdk-c/macro-utils/: CMakeLists.txt
components/azure-iot-sdk-c/ntp-client/: CMakeLists.txt
components/azure-iot-sdk-c/ntp-client/include/: iot_ntp_client.h
components/azure-iot-sdk-c/ntp-client/src/: iot_ntp_client.c
components/azure-iot-sdk-c/parson/: CMakeLists.txt
components/azure-iot-sdk-c/platform/: CMakeLists.txt
components/azure-iot-sdk-c/platform/src/: platform_openiot.c  socketio_openiot.c
components/azure-iot-sdk-c/platform/tests/: CMakeLists.txt  test_platform_openiot.cpp  test_tickcounter_openiot.cpp
components/azure-iot-sdk-c/uamqp-client/: CMakeLists.txt
components/azure-iot-sdk-c/uhttp/: CMakeLists.txt
components/azure-iot-sdk-c/umqtt-client/: CMakeLists.txt
components/azure-rtos/: CMakeLists.txt  README.md
components/azure-rtos/netxduo/: CMakeLists.txt
components/azure-rtos/netxduo/mocks/: CMakeLists.txt
components/azure-rtos/netxduo/nx-ip-link-mdh/: CMakeLists.txt
components/azure-rtos/threadx/: CMakeLists.txt
components/azure-rtos/threadx/mocks/: CMakeLists.txt
components/cmsis-dsp/: CMakeLists.txt
components/cmsis-freertos/: CMakeLists.txt
components/cmsis_5/: CMakeLists.txt
components/cmsis_5/mocks/: CMakeLists.txt
components/cmsis_5/mocks/inc/: cmsis_os2.h
components/cmsis_5/mocks/src/: cmsis_os2.c
components/connectivity/: CMakeLists.txt
components/connectivity/ip_network/: CMakeLists.txt
components/connectivity/lwip/: CMakeLists.txt
components/connectivity/sockets/: CMakeLists.txt
components/mbed-os-netsocket/: CMakeLists.txt  README.md
components/mbed-os-netsocket/common/: CMakeLists.txt
components/mbed-os-netsocket/common/include/: ip4string.h  ip6string.h
components/mbed-os-netsocket/include/netsocket/: InternetDatagramSocket.h  InternetSocket.h  Socket.h  SocketAddress.h  TCPSocket.h  TLSSocket.h  TLSSocketWrapper.h  UDPSocket.h  nsapi_types.h
components/mbed-os-netsocket/mock/: CMakeLists.txt
components/mbed-os-netsocket/mock/include/: cmsis_os2.h  iot_socket.h  mbed_error.h
components/mbed-os-netsocket/src/: InternetDatagramSocket.cpp  InternetSocket.cpp  IotSocketToMbed.c  SocketAddress.cpp  TCPSocket.cpp  TLSSocket.cpp  TLSSocketWrapper.cpp  UDPSocket.cpp
components/mbed-os-netsocket/tests/: CMakeLists.txt
components/mbedtls/: CMakeLists.txt
components/mbedtls/mocks/: CMakeLists.txt
components/mbedtls/tests/: CMakeLists.txt  test_mbedtls_threading_cmsis_rtos.cpp
components/mcu-driver-reference-platforms-for-arm/: CMakeLists.txt
components/ml-embedded-evaluation-kit/: BuildMlEmbeddedEvaluationKit.cmake  CMakeLists.txt
components/nimble/: CMakeLists.txt
components/pigweed/: CMakeLists.txt  pigweed.patch
components/pigweed/pw_chrono_cmsis_rtos/: CMakeLists.txt  system_clock.cc  system_timer.cc
components/pigweed/pw_cmsis_rtos_util/: CMakeLists.txt  kernel_lock.cc
components/pigweed/pw_iot_sdk_config/: CMakeLists.txt  ReadMe.md
components/pigweed/pw_log_mcu_driver_hal/: CMakeLists.txt
components/pigweed/pw_log_sys_io_mdh/: CMakeLists.txt  README.md  pw_log_mdh_backend.cc
components/pigweed/pw_sync_cmsis_rtos/: CMakeLists.txt  internal_mutex.cc  native_interrupt_spin_lock.cc  native_thread_notification.cc
components/pigweed/pw_sys_io_mcu_driver_hal/: CMakeLists.txt  sys_io_mdh.cc
components/pigweed/pw_thread_cmsis_rtos/: CMakeLists.txt  id.cc  sleep.cc  thread.cc  yield.cc
components/pyedmgr/: CMakeLists.txt
components/storage/: CMakeLists.txt
components/storage/littlefs/: CMakeLists.txt
components/tinyusb/: CMakeLists.txt
components/trusted-firmware-m/: BuildTfm.cmake  CMakeLists.txt  SignTfmImage.cmake
components/trusted-firmware-m/mocks/: CMakeLists.txt
components/trusted-firmware-m/tfm_ns_interface_threadx/: CMakeLists.txt  os_wrapper_threadx.c
templates/examples/: CMakeLists.txt
templates/examples/aws-client/: CMakeLists.txt.in  main.c
templates/examples/azure-netxduo/: CMakeLists.txt  CMakeLists.txt.in  app_config.h  intro.md  main.c
templates/examples/azure-netxduo-iot/: CMakeLists.txt  CMakeLists.txt.in  intro.md  main.c  sample_azure_iot_credentials.h  sample_azure_iot_embedded_sdk.c  sample_azure_iot_embedded_sdk_connect.c  sample_config.h
templates/examples/azure-sdk/: CMakeLists.txt.in  main.c
templates/examples/cmsis-lwip/: CMakeLists.txt.in  main.c
templates/examples/cmsis-rtos-api/: CMakeLists.txt.in
templates/examples/freertos-api/: CMakeLists.txt.in  main.c
templates/examples/littlefs/: CMakeLists.txt.in  main.c
templates/examples/mbed-os-netsocket/: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
templates/examples/mbedtls/: CMakeLists.txt.in  main.c
templates/examples/pigweed-chrono/: CMakeLists.txt  CMakeLists.txt.in  main.cc
templates/examples/pigweed-log/: CMakeLists.txt.in  CMakeLists_cmsis_rtos.txt.in  main_cmsis_rtos.c
templates/examples/pigweed-rpc/: CMakeLists.txt  CMakeLists.txt.in
templates/examples/pigweed-sys-io/: CMakeLists.txt  CMakeLists.txt.in  main.cc  uart.cc
templates/examples/pigweed-thread/: CMakeLists.txt  CMakeLists.txt.in  main.cc
templates/examples/tf-m/: CMakeLists.txt.in  crypto.c  firmware_update.c  main.c
templates/examples/threadx-api/: CMakeLists.txt.in
utils/mocks/: CMakeLists.txt
utils/mocks/inc/: iotsdk_memory_manager.h  mps3_emac.h
utils/mocks/src/: iotsdk_memory_manager.c  mps3_emac.c
(+244 files in other folders)
