# Copyright (c) 2022, Arm Limited and Contributors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(aws-client)
add_subdirectory(azure-netxduo)
add_subdirectory(azure-netxduo-iot)
add_subdirectory(azure-sdk)
add_subdirectory(cmsis-lwip)
add_subdirectory(cmsis-rtos-api)
add_subdirectory(freertos-api)
add_subdirectory(littlefs)
add_subdirectory(mbedtls)
add_subdirectory(pigweed-chrono)
add_subdirectory(pigweed-log)
add_subdirectory(pigweed-rpc)
add_subdirectory(pigweed-sys-io)
add_subdirectory(pigweed-thread)
add_subdirectory(tf-m)
add_subdirectory(threadx-api)
add_subdirectory(mbed-os-netsocket)
